fix weird background colors on mobile screen

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -145,7 +145,7 @@
     display: none;
  }
  .rightContainer{
-    height: 100vh;
+    
  }
 
 }
