--- a/src/components/Schedule/Schedule.module.css
+++ b/src/components/Schedule/Schedule.module.css
@@ -10,6 +10,7 @@
     background-color: #ffffff;
     padding: 30px 40px 30px 40px;
     border-radius: 20px;
+    margin-bottom: 50px;
 }
 .charts{
     /* display: flex; */
